--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "serialize-javascript": ">=2.1.1",
     "axios": "^0.19.0",
-    "core-js": "^3.4.3",
+    "core-js": "^3.6.1",
     "crypto-js": "^3.1.9-1",
-    "vue": "^2.6.10",
+    "serialize-javascript": "^2.1.2",
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.15.3",
     "vue-infinite-loading": "^2.4.4",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
