--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^3.1.9-1",
     "serialize-javascript": "^2.1.2",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.15.3",
     "vue-infinite-loading": "^2.4.4",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
